@@ -14,6 +14,8 @@ Feel free to do any of these things and send a patch to
 
 * Todo list
 
+** Implement ICQ version 7/8 protocol.
+
 ** Figure out why sometime being kicked out after long inactivity.
 
 ** Builtin udp support in XEmacs.
