@@ -1,3 +1,14 @@
+2001-12-24  Steve Youngs  <youngs@xemacs.org>
+
+	* TODO: Add item about implementing new protocol.
+
+2001-10-8   Thorsten Bonow <thorsten.bonow@post.rwth-aachen.de>
+
+	* icq2tcp.c (main): Assign command line arguments to variables
+	only after checking if correct number of them is passed to the
+	program. Cygwin segfaults when none existing arguments are
+	assigned.
+
 2001-09-29  Steve Youngs  <youngs@xemacs.org>
 
 	* Version 0.2.17 released.
